fix create survey record